Add smart diagnostics, deployment dashboard, coverage runner, and update plugin branding
- Error diagnostics engine with 16+ pattern detections and actionable suggestions
- Tomcat/JDK version compatibility checker (Tomcat 7-11 matrix)
- Live deployment status tracking in Services tool window
- Deployment history with persistent storage
- Startup time trends and performance tracking
- Code coverage runner with JaCoCo support
- Update Running Application (Ctrl+F10) support
- Console filter with clickable URLs and file paths
- Config export/import for team sharing
- Remote deployment via Tomcat Manager API
- RegistryHelper for null-safe registry access
- Startup/Connection tab with per-mode runner settings
- PasswordSafe threading fix (deferred credential retrieval)
- Remove IntelliJ Ultimate references from user-facing text
- Update vendor to Gezu